[workspace]
members = [
    "binary_search",
    "container_with_most_water",
    "counting_bits",
    "create_target_array_in_the_given_order",
    "defanging_an_ip_address",
    "find_numbers_with_even_number_of_digits",
    "how_many_numbers_are_smaller_than_the_current_number",
    "longest_substring_without_repeating_characters",
    "max_depth_of_binary_tree",
    "merge_intervals",
    "merge_two_sorted_lists",
    "palindrome_number",
    "reverse_linked_list",
    "running_sum_of_1d_array",
    "same_tree",
    "set_matrix_zeroes",
    "shuffle_string",
    "shuffle_the_array",
    "single_number",
    "subtract_the_product_and_sum_of_digits_of_an_integer",
    "triangle",
    "two_sum",
    "valid_anagram",
]
